--- a/src/components/organisms/Search/search.module.scss
+++ b/src/components/organisms/Search/search.module.scss
@@ -6,7 +6,7 @@
         text-align: center;
 
         &__title {
-            color: #355070;
+            color: #3c096c;
             font-size: 60px;
         }
 
