--- a/src/components/organisms/Pokedex/pokedex.module.scss
+++ b/src/components/organisms/Pokedex/pokedex.module.scss
@@ -1,9 +1,56 @@
 .Pokedex {
     text-align: center;
-    
 
     &__fundo {
         display: inline-block;
         margin-top: 50px;
+        position: relative;
+        &__img {
+            width: 100%;
+            margin: 0 auto;
+            @media (max-width: 446px) {
+                width: 60%;
+            }
+        }
+        &__animation {
+            position: absolute;
+            bottom: 55%;
+            left: 50%;
+            transform: translate(-63%, 20%);
+            height: 18%;
+        }
+        &__data {
+            position: absolute;
+            font-weight: 600;
+            color: #aaa;
+            top: 54.5%;
+            right: 27%;
+            font-size: clamp(
+                8px,
+                5vw,
+                25px
+            ); //recebe 3 paramentros (min,desejável,max)
+        }
+        &__name {
+            color: #3a444d;
+            text-transform: capitalize;
+        }
+        &__form {
+            position: absolute;
+            width: 65%;
+            top: 65%;
+            left: 13.5%;
+        }
+        &__search {
+            width: 100%;
+            padding: 4%;
+            outline: none;
+            border: 2px solid #333;
+            border-radius: 5px;
+            font-weight: 600;
+            color: #3a444d;
+            font-size: clamp(8px, 5vw, 16px);
+            box-shadow: -3px 4px 0 #686767, -5px 7px 0 #333;
+        }
     }
 }
