--- a/src/index.scss
+++ b/src/index.scss
@@ -6,6 +6,7 @@ body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     background: linear-gradient(to bottom, #fff, #6ab7f5);
+    min-height: 100vh;
 }
 
 code {
