--- a/src/components/atoms/Button/button.module.scss
+++ b/src/components/atoms/Button/button.module.scss
@@ -7,7 +7,8 @@
     display: flex;
     gap: 20px;
 
-    &__prev {
+    &__prev,
+    &__next {
         width: 50%;
         padding: 4%;
         border: 2px solid #000;
@@ -16,16 +17,10 @@
         font-weight: 600;
         color: white;
         background-color: #444;
-    }
-
-    &__next {
-        width: 50%;
-        padding: 4%;
-        border: 2px solid #000;
-        border-radius: 5px;
-        font-size: clamp(5px, 5vw, 16px);
-         font-weight: 600;
-        color: white;
-        background-color: #444;
+        box-shadow: -2px 3px 0 #222, -4px 6px 0 #000;
+        &:active {
+            box-shadow: inset -4px 4px 0 #222;
+            font-size: 14px;
+        }
     }
 }
