--- a/src/components/organisms/Search/search.module.scss
+++ b/src/components/organisms/Search/search.module.scss
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap");
+
 .Container {
     font-family: "Inter", sans-serif;
 
@@ -6,9 +7,8 @@
         text-align: center;
 
         &__title {
-            color: #3c096c;
-            font-size: 60px;
-            margin-top: 20px;
+            width: 30%;
+            height: 30%;
         }
 
         &__search {
